# devops-error-library

./: .gitignore  CONTRIBUTING.md  ERROR_TEMPLATE.md  LICENSE-CODE  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  correction.yml  new_error.yml
.github/workflows/: ci.yml
errlib/: __init__.py  cli.py  frontmatter.py  index.py  model.py  new_error.py  search.py  validate.py
errors/: README.md
errors/ceph/: README.md  ceph-health-warn-osd-nearfull.md  ceph-mon-clock-skew-detected.md  ceph-monitors-down-no-quorum.md  ceph-osd-down-and-out.md  ceph-pg-degraded-undersized.md  ceph-pg-inconsistent-scrub-errors.md  ceph-pool-full-no-space.md  ceph-slow-ops-osd-blocked-requests.md
errors/docker/: README.md  docker-cannot-connect-to-docker-daemon.md  docker-container-oomkilled-exit-137.md  docker-failed-to-mount-overlay.md  docker-image-pull-failed.md  docker-invalid-mount-config-for-type-bind.md  docker-manifest-unknown.md  docker-no-matching-manifest-linux-amd64.md  docker-no-space-left-on-device.md  docker-oci-runtime-create-failed.md  docker-permission-denied-docker-socket.md  docker-port-is-already-allocated.md  docker-pull-access-denied.md
errors/gitlab/: README.md  gitlab-429-too-many-requests.md  gitlab-cannot-connect-to-docker-daemon-dind.md  gitlab-could-not-read-username-ci-job-token.md  gitlab-invalid-ci-config-yaml.md  gitlab-job-failed-exit-code-1.md  gitlab-job-stuck-no-runners-with-tags.md  gitlab-no-space-left-on-device.md  (+5 more)
scripts/: gen_indexes.py
tests/: conftest.py  test_errlib.py
(+146 files in other folders)
